--- a/WebApp/Pages/CreateAccount.razor
+++ b/WebApp/Pages/CreateAccount.razor
@@ -131,7 +131,7 @@
             }
 
             UsersService.CreateAccount(newUser);
-            NavigationManager.NavigateTo("/login");
+            NavigationManager.NavigateTo("/Movies");
         }
         else
         {
